derive/tests/snapshots/every_field_attribute/Owner/get_all_owners.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `owner` table.
    pub fn get_all_owners<'a>(&'a self) -> impl Iterator<Item = Owner> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().owner().iter()
    }
}
