derive/tests/snapshots/every_field_attribute/Owner/get_owner_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Owner` from the `owner` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_owner_by_id<'a>(
        &'a self,
        id: impl Into<OwnerId> + Clone,
    ) -> Result<Owner, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().owner().id().find(id.clone().into().value()) {
            Some(owner) => Ok(owner),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "owner".into(),
                    column_names_and_row_values: format!(
                        "{{ id : {} }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Owner` from the `owner` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_owner_by_id<'a>(
        &'a self,
        id: impl Into<OwnerId> + Clone,
    ) -> Result<Owner, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().owner().id().find(id.clone().into().value()) {
            Some(owner) => Ok(owner),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "owner".into(),
                    column_names_and_row_values: format!(
                        "{{ id : {} }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
