derive/tests/snapshots/every_field_attribute/Owner/internal_methods.snap
---
source: derive/src/characterization_tests.rs
---
// execute_on_delete_strategies_of_referencing_tables_after_one_row_of_the_owner_table_was_deleted
impl crate::spacetimedsl::internal::DSLInternals {
    ///Execute On Delete Strategies of all referencing tables after one row of the referenced table `owner` was deleted.
    pub fn execute_on_delete_strategies_of_referencing_tables_after_one_row_of_the_owner_table_was_deleted<
        'a,
        T: crate::spacetimedsl::WriteContext,
    >(
        dsl: &crate::spacetimedsl::DSL<'_, T>,
        strategy: crate::spacetimedsl::delete::OnDeleteStrategy,
        primary_key_value_of_a_row_to_delete: &Uuid,
    ) -> Result<
        Vec<crate::spacetimedsl::delete::DeletionResultEntry>,
        crate::spacetimedsl::delete::OnDeleteStrategyFailure<
            Vec<crate::spacetimedsl::delete::DeletionResultEntry>,
        >,
    > {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use self::this_compilation_error_occurs_because_the_gadget_table_has_no_foreign_key_attribute_with_on_delete_defined_referencing_the_owner_table;
        let mut entries = vec![];
        let mut error_from_hook: Option<
            Box<crate::spacetimedsl::error::SpacetimeDSLError>,
        > = None;
        let mut error = false;
        match crate::spacetimedsl::internal::DSLInternals::execute_on_delete_strategies_of_the_gadget_table_after_one_row_of_the_owner_table_was_deleted(
            dsl,
            &strategy,
            primary_key_value_of_a_row_to_delete,
        ) {
            Err(failure) => {
                let mut child_entries = failure.entries;
                entries.append(&mut child_entries);
                if error_from_hook.is_none() {
                    error_from_hook = failure.error_from_hook;
                }
                error = true;
            }
            Ok(mut child_entries) => {
                entries.append(&mut child_entries);
            }
        };
        match error {
            false => Ok(entries),
            true => {
                Err(crate::spacetimedsl::delete::OnDeleteStrategyFailure {
                    entries: entries,
                    error_from_hook: error_from_hook,
                })
            }
        }
    }
}

// execute_on_delete_strategies_of_referencing_tables_after_multiple_rows_of_the_owner_table_were_deleted
impl crate::spacetimedsl::internal::DSLInternals {
    ///Execute On Delete Strategies of all referencing tables after multiple rows of the referenced table `owner` were deleted.
    pub fn execute_on_delete_strategies_of_referencing_tables_after_multiple_rows_of_the_owner_table_were_deleted<
        'a,
        T: crate::spacetimedsl::WriteContext,
    >(
        dsl: &crate::spacetimedsl::DSL<'_, T>,
        strategy: crate::spacetimedsl::delete::OnDeleteStrategy,
        primary_key_values_of_rows_to_delete: &'a [Uuid],
    ) -> Result<
        std::collections::HashMap<
            &'a Uuid,
            Vec<crate::spacetimedsl::delete::DeletionResultEntry>,
        >,
        crate::spacetimedsl::delete::OnDeleteStrategyFailure<
            std::collections::HashMap<
                &'a Uuid,
                Vec<crate::spacetimedsl::delete::DeletionResultEntry>,
            >,
        >,
    > {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use self::this_compilation_error_occurs_because_the_gadget_table_has_no_foreign_key_attribute_with_on_delete_defined_referencing_the_owner_table;
        let mut entries = std::collections::HashMap::new();
        if primary_key_values_of_rows_to_delete.is_empty() {
            return Ok(entries);
        }
        for primary_key_value_of_a_row_to_delete in primary_key_values_of_rows_to_delete {
            entries.insert(primary_key_value_of_a_row_to_delete, vec![]);
        }
        let mut error_from_hook: Option<
            Box<crate::spacetimedsl::error::SpacetimeDSLError>,
        > = None;
        let mut error = false;
        match crate::spacetimedsl::internal::DSLInternals::execute_on_delete_strategies_of_the_gadget_table_after_multiple_rows_of_the_owner_table_were_deleted(
            dsl,
            &strategy,
            primary_key_values_of_rows_to_delete,
        ) {
            Err(failure) => {
                for (primary_key_value_of_a_row_to_delete, mut child_entries) in failure
                    .entries
                {
                    entries
                        .get_mut(&primary_key_value_of_a_row_to_delete)
                        .expect(
                            "the referencing tables return child entries only for the primary key values of the rows this table deletes",
                        )
                        .append(&mut child_entries);
                }
                if error_from_hook.is_none() {
                    error_from_hook = failure.error_from_hook;
                }
                error = true;
            }
            Ok(child_entries_by_primary_key_value_of_a_row_to_delete) => {
                for (primary_key_value_of_a_row_to_delete, mut child_entries) in child_entries_by_primary_key_value_of_a_row_to_delete {
                    entries
                        .get_mut(&primary_key_value_of_a_row_to_delete)
                        .expect(
                            "the referencing tables return child entries only for the primary key values of the rows this table deletes",
                        )
                        .append(&mut child_entries);
                }
            }
        };
        match error {
            false => Ok(entries),
            true => {
                Err(crate::spacetimedsl::delete::OnDeleteStrategyFailure {
                    entries: entries,
                    error_from_hook: error_from_hook,
                })
            }
        }
    }
}
