derive/tests/snapshots/every_field_attribute/Owner/table.snap
---
source: derive/src/characterization_tests.rs
---
// Documentation appended to the struct:
///
/// # Tables referencing the `owner` table
///
/// - the `gadget` table (`self`)

pub trait this_compilation_error_occurs_because_the_owner_table_is_not_deletable_or_has_no_referenced_by_attribute_referencing_the_gadget_table {}
pub trait this_compilation_error_occurs_because_your_foreign_key_referencing_the_owner_table_needs_to_define_a_strategy_for_on_soft_delete_or_the_owner_table_has_no_referenced_by_attribute_referencing_the_gadget_table {}
const _: () = {
    use self::this_compilation_error_occurs_because_the_gadget_table_has_no_foreign_key_attribute_referencing_the_owner_table;
};
#[derive(
    Clone,
    Debug,
    PartialEq,
    PartialOrd,
    Eq,
    Ord,
    Hash,
    ::spacetimedb::SpacetimeType
)]
pub struct OwnerId {
    value: Uuid,
}
impl OwnerId {
    /// Generate a random UUID v4.
    pub fn v4(
        dsl: &crate::spacetimedsl::DSL<'_, impl crate::spacetimedsl::WriteContext>,
    ) -> Result<Self, crate::spacetimedsl::error::SpacetimeDSLError> {
        Ok(Self {
            value: crate::spacetimedsl::NewUUID::new_uuid_v4(dsl.ctx())?,
        })
    }
    /// Generate a UUID v7, which sorts in the order the values were generated.
    pub fn v7(
        dsl: &crate::spacetimedsl::DSL<'_, impl crate::spacetimedsl::WriteContext>,
    ) -> Result<Self, crate::spacetimedsl::error::SpacetimeDSLError> {
        Ok(Self {
            value: crate::spacetimedsl::NewUUID::new_uuid_v7(dsl.ctx())?,
        })
    }
}
impl std::fmt::Display for OwnerId {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{} {{ id: {:?} }}", "OwnerId", self.value)
    }
}
impl crate::spacetimedsl::Wrapper<Uuid> for OwnerId {
    fn new(value: Uuid) -> Self {
        Self { value }
    }
    fn value(&self) -> Uuid {
        self.value.clone()
    }
}
impl From<&Owner> for OwnerId {
    fn from(value: &Owner) -> Self {
        OwnerId { value: value.id.clone() }
    }
}
impl From<&Owner> for Option<OwnerId> {
    fn from(value: &Owner) -> Option<OwnerId> {
        Some(OwnerId { value: value.id.clone() })
    }
}
impl From<&OwnerId> for Option<OwnerId> {
    fn from(value: &OwnerId) -> Option<OwnerId> {
        use crate::spacetimedsl::Wrapper;
        Some(OwnerId::new(value.value()))
    }
}
impl From<&OwnerId> for OwnerId {
    fn from(value: &OwnerId) -> Self {
        use crate::spacetimedsl::Wrapper;
        OwnerId::new(value.value())
    }
}
impl Owner {
    ///
    pub fn get_id(&self) -> OwnerId {
        use crate::spacetimedsl::Wrapper;
        OwnerId::new(self.id.clone())
    }
    ///
    pub fn get_name(&self) -> &String {
        use crate::spacetimedsl::Wrapper;
        &self.name
    }
    ///
    pub fn get_name_mut(&mut self) -> &mut String {
        use crate::spacetimedsl::Wrapper;
        &mut self.name
    }
    ///
    pub fn set_name(&mut self, name: String) -> String {
        use crate::spacetimedsl::Wrapper;
        let old_value = std::mem::replace(&mut self.name, name);
        old_value
    }
}
///
pub struct CreateOwner {
    pub name: String,
}

// Generated DSL methods:
// count_of_all_owners
// create_owner
// delete_owner_by_id
// execute_on_delete_strategies_of_referencing_tables_after_multiple_rows_of_the_owner_table_were_deleted
// execute_on_delete_strategies_of_referencing_tables_after_one_row_of_the_owner_table_was_deleted
// get_all_owners
// get_owner_by_id
// update_owner_by_id
